update:     use Apache Maven to package jar